<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CoordinatorAtas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundTab">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:id="@+id/layoutatasTentang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                app:layout_collapseMode="pin">


                <ImageView
                    android:id="@+id/imageViewzo2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/logo"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/des_app_datar"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12dp" />
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ScrollNested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/backgroundTab">

                <TextView
                    android:id="@+id/txt01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:text="Tentang Aplikasi"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/txt01"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/defaultThema"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/Relative1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt01"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="Nama Aplikasi"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@id/txt1"
                        android:enabled="false"
                        android:text="@string/app_name"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Relative2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Relative1"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt11"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text="Versi Aplikasi"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txt21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/txt11"
                        android:enabled="false"
                        android:text="@string/versi_app"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Relative3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Relative2"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@id/imageView3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt12"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text="Pembaharuan"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:enabled="false"
                        android:text=" : "
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txt22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/txt12"
                        android:enabled="false"
                        android:text="@string/update"
                        android:textColor="@color/text_standar"
                        android:textSize="14dp" />
                </LinearLayout>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:background="@color/backgroundTab"
        android:gravity="center"
        android:text="Developer\ngusti.ngurah.mertayasa@gmail.com"
        android:textSize="12sp" />
</android.support.design.widget.CoordinatorLayout>